Avoid images introducing horizontal scroll

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -60,6 +60,10 @@ a:visited {
   }
 }
 
+img {
+  max-width: 100%;
+}
+
 main {
   margin-bottom: 3rem;
   min-height: 60vh;
